styles.css
.parent-block {
  display: flex;
  justify-content: center;
  align-items: center;
}

.constant-text-field {
  background-color: lightgrey;
  width: 50px;
  height: 20px;
  font-size: 20px;
  font-family: Helvetica, sans-serif;
}

.text-field{
  width: 50px;
  height: 20px;
  font-size: 20px;
  font-family: Helvetica, sans-serif;
}

.button{
  font-size: 25px;
  font-family: Helvetica, sans-serif;
}

.h1{
  font-size: 25px;
  font-family: Helvetica, sans-serif;
}

.bibliography-text{
  font-size: 17px;
  font-family: Helvetica, sans-serif;
}

/*https://www.scriptol.com/css/tooltip.php*/
.tooltip {
  text-decoration:none;
  position:relative;
}
 
.tooltip span {
  display:none;
  -moz-border-radius:6px;
  -webkit-border-radius:6px;
  border-radius:0px;
  color:black;
  background:white; 
}
 
/*.tooltip span img {
  float:left;
  margin:0px 8px 8px 0;
}*/
 
.tooltip:hover span {
  display:block;
  position:absolute;
  top:0;
  left:0;
  z-index:1000;
  width:auto;
  /*max-width:960px;*/
  min-height:128px;
  border:1px solid black;
  margin-top:12px;
  margin-left:32px;
  overflow:hidden;
  padding:8px;
}

